--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 rocket = { path = "../_lib_rocket/core/lib" }
 pulldown-cmark = "0.9.2"
 syntect = "5.0"
+toml = "0.5.9"
+serde = "1.0"
 
 [dependencies.rocket_dyn_templates]
 path = "../_lib_rocket/contrib/dyn_templates"
