--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ pulldown-cmark = "0.9.2"
 syntect = "5.0"
 toml = "0.5.9"
 serde = "1.0"
+chrono = "*"
 
 [dependencies.rocket_dyn_templates]
 path = "../_lib_rocket/contrib/dyn_templates"
