--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = { path = "../_lib_rocket/core/lib" }
+rocket = "0.5.0-rc.2"
 pulldown-cmark = "0.9.2"
 syntect = "5.0"
 toml = "0.5.9"
@@ -14,8 +14,8 @@ serde = "1.0"
 chrono = "*"
 
 [dependencies.rocket_dyn_templates]
-path = "../_lib_rocket/contrib/dyn_templates"
-features = ["tera"]
+version = "0.1.0-rc.2"
+features = ["handlebars", "tera"]
 
 [dependencies.redis]
 version = "*"
